test/should-fail/vsgc3444.f3
/**
 * Regress test for VSGC-3444: attribute invalidate x statements
 *
 * @test/compile-error
 */

invalidate 1; //invalidate argument must be a var
